bpo-36256: Fix bug in parsermodule when parsing if statements

In the parser module, when validating nodes before starting the parsing
with to create a ST in "parser_newstobject" there is a problem that
appears when two arcs in the same DFA state has transitions with labels
with the same type. For example, the DFA for if_stmt has a state with
two labels with the same type: "elif" and "else" (type NAME). The
algorithm tries one by one the arcs until the label that starts the arc
transition has a label with the same type of the current child label we are
triying to accept. In this case, the arc for "elif" comes before the arc
for "else"and passes this test (because the current child label is "else"
and has the same type as "elif"). This lead to expecting a namedexpr_test
(305) instead of a colon (11). The solution is to compare also the string
representation (in case there is one) of the labels to see if the transition
that we have is the correct one.